--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,27 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  print-hello:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: circleci/node:13.8.0
+
     steps:
-      - checkout
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  print-welcome:
+    docker:
+      - image: circleci/node:13.8.0
+
+    steps:
+      - run:
+          name: "Say welcome"
+          command: "echo Welcome, World!"
 workflows:
-  say-hello-workflow:
+  welcome-workflow:
     jobs:
-      - say-hello
+      - print-hello
+      - print-welcome:
+           requires:
+             - print-hello
